--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="categorie_dezvoltare_personala">Dezvoltare Personala</string>
     <string name="categorie_preferate">Preferate</string>
     <string name="categorie_contact">Contact</string>
+    <string name="title_activity_display_book">DisplayBookActivity</string>
 </resources>
