--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,6 @@
     <string name="categorie_contact">Contact</string>
     <string name="title_activity_display_book">DisplayBookActivity</string>
     <string name="title_activity_locatii">Map</string>
+    <string name="appwidget_text">BookCorner recomanda:</string>
+    <string name="add_widget">Add widget</string>
 </resources>
